# stackoverflow-streambuf-example

./: CMakeLists.txt  README.md
src/: Num_Virtual_File.h  example_1.cpp  example_2.cpp  example_3.cpp
